...
                        
                        VStack(spacing: 16) {
                            Button("Quiz me!") {
                                isShowingSetupSheet = true
                            }
                            .buttonStyle(.primary)
                            .accessibilityIdentifier("quiz-me-button")
                            
                            NavigationLink("Stats") {
                                BreedStatsListView()
                            }
                            .buttonStyle(.primary)
                            .accessibilityIdentifier("stats-button")
...
